# AlgorithmSimulator

./: CMakeLists.txt  config.ini  main.cpp
Config/: ConfigManager.cpp  ConfigManager.h
Controllers/: AlgorithmController.h  DataController.h  ResultsController.cpp  ResultsController.h  SimulationController.cpp  SimulationController.h  SortingDataController.h
Data/: DataArrangement.h  GapStrategy.h  GenerateData.h  PivotStrategy.h  ResultsManager.cpp  ResultsManager.h  SortingDataManager.h  ValidateIfSorted.h
SortingAlgorithms/: AlgorithmManager.h  HeapSort.h  InsertionSort.h  Quicksort.h  ShellSort.h
